--- a/requirements_kaggle.txt
+++ b/requirements_kaggle.txt
@@ -1,25 +1,25 @@
-accelerate>=0.25.0
-transformers>=4.41.0
-tokenizers>=0.15.0
+accelerate==0.25.0
+transformers==4.36.2
+tokenizers==0.15.0
 cn2an==0.5.22
 ffmpeg-python==0.2.0
-Cython>=3.0.7
+Cython==3.0.7
 g2p-en==2.1.0
 jieba==0.42.1
-# keras>=3.5.0
-numba>=0.59.1
-numpy>=1.26.4
-pandas>=2.2.0
-matplotlib>=3.8.2
-opencv-python>=4.9.0.80
+keras==2.9.0
+numba>=0.59.1,<0.61.0
+numpy>=1.26.4,<1.27.0
+pandas>=2.2.0,<3.0.0
+matplotlib==3.8.2
+opencv-python==4.9.0.80
 vocos==0.1.0
-tensorboard>=2.18.0
+tensorboard==2.9.1
 omegaconf
 sentencepiece
 librosa
 gradio
 tqdm
-protobuf>=3.20.2
+protobuf>=3.20.2,<4.0.0
 
 WeTextProcessing; platform_machine != "Darwin"
 wetext; platform_system == "Darwin"
